--- a/web-app/kapetanioswebapp_front/pubspec.yaml
+++ b/web-app/kapetanioswebapp_front/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   syncfusion_flutter_charts: ^28.1.36
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.8.0
+  http: ^1.3.0
+  json_annotation: ^4.8.1
+  quickalert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +51,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.4
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
