--- a/web-app/kapetanioswebapp_front/pubspec.yaml
+++ b/web-app/kapetanioswebapp_front/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.3.0
   json_annotation: ^4.8.1
   quickalert: ^1.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
