--- a/agent/src/Deployment/templates/deployment.yaml
+++ b/agent/src/Deployment/templates/deployment.yaml
@@ -15,10 +15,16 @@ spec:
       labels:
         {{- include "kapetanios-agent.selectorLabels" . | nindent 8 }}
     spec:
+      # Asegura que DNS funcione correctamente
+      dnsPolicy: "ClusterFirst"
+      # Permite tráfico saliente
+      hostNetwork: {{ .Values.network.hostNetwork }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
           volumeMounts:
             - name: config-volume
               mountPath: /etc/config
@@ -39,4 +45,5 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
-      {{- end }} 
+      {{- end }}
+      serviceAccountName: {{ .Release.Name }}-sa
