--- a/web-app/kapetanioswebapp_front/pubspec.yaml
+++ b/web-app/kapetanioswebapp_front/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   json_annotation: ^4.8.1
   quickalert: ^1.1.0
   intl: ^0.20.2
+  firebase_core: ^2.32.0
+  cloud_firestore: ^4.16.2
 
 dev_dependencies:
   flutter_test:
