feat(agent): the notificationmanager has been added
NotificiationManager

This class sends some events collected from the main pipeline of the agent to show them to the user on the webapp.

--- a/agent/src/Deployment/templates/deployment.yaml
+++ b/agent/src/Deployment/templates/deployment.yaml
@@ -28,6 +28,9 @@ spec:
           volumeMounts:
             - name: config-volume
               mountPath: /etc/config
+          env:
+            - name: CONFIGMAP_PATH
+              value: "/etc/config"
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
