--- a/agent/src/Deployment/templates/cluster-role-binding.yaml
+++ b/agent/src/Deployment/templates/cluster-role-binding.yaml
@@ -1,13 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Release.Name }}-clusterrolebinding
-  namespace: kapetanios
-subjects:
-  - kind: ServiceAccount
-    name: {{ .Release.Name }}-sa
-    namespace: kapetanios
+  name: {{ .Release.Name }}-rolebinding
 roleRef:
+  apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: {{ .Release.Name }}-clusterrole
-  apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: ServiceAccount
+  name: {{ .Release.Name }}-sa
+  namespace: kapetanios
