fix: adding nodePort for hawkbit, including a new version release 0.1.1 as fix

--- a/hawkbit_stack/helm/hawkbit/templates/hawkbit-service.yaml
+++ b/hawkbit_stack/helm/hawkbit/templates/hawkbit-service.yaml
@@ -5,9 +5,11 @@ metadata:
   labels:
     app: {{ .Release.Name }}-hawkbit
 spec:
+  type: {{ .Values.hawkbit.service.type | default "NodePort" }}
   ports:
     - port: {{ .Values.hawkbit.service.port }}
       targetPort: {{ .Values.hawkbit.service.targetPort }}
+      nodePort: {{ .Values.hawkbit.service.nodePort }}
       protocol: TCP
       name: http
   selector:
